# shapematch

./: CMakeLists.txt  README.md
include/: line2Dup.h  shape_match.h
src/: line2Dup.cpp  shape_match.cpp
test/: test.cc
test/log/: readme.txt
test/scripts/: naviID_10_devID_2_pos_1_1.xml  naviID_10_devID_2_pos_1_2.xml
